--- a/src/EventPlanning.Api/EventPlanning.Api.csproj
+++ b/src/EventPlanning.Api/EventPlanning.Api.csproj
@@ -7,7 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.21" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EventPlanning.Application\EventPlanning.Application.csproj" />
+    <ProjectReference Include="..\EventPlanning.Infrastructure\EventPlanning.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
