"feat(api): DTOs, Program, controllers (auth/admin/events) with AutoMapper"

--- a/src/EventPlanning.Api/EventPlanning.Api.csproj
+++ b/src/EventPlanning.Api/EventPlanning.Api.csproj
@@ -12,10 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\Contracts\Contracts.csproj" />
     <ProjectReference Include="..\EventPlanning.Application\EventPlanning.Application.csproj" />
     <ProjectReference Include="..\EventPlanning.Infrastructure\EventPlanning.Infrastructure.csproj" />
   </ItemGroup>
