--- a/src/EventPlanning.Api/appsettings.Development.json
+++ b/src/EventPlanning.Api/appsettings.Development.json
@@ -1,8 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "Default": "Server=localhost;Database=EventPlanning;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "Email": {
+    "From": "no-reply@yourdomain.com",
+    "SmtpHost": "smtp.yourhost.com",
+    "SmtpPort": "587",
+    "User": "smtp-user",
+    "Password": "smtp-password"
   }
 }
