--- a/src/EventPlanning.Application/EventPlanning.Application.csproj
+++ b/src/EventPlanning.Application/EventPlanning.Application.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Contracts\Contracts.csproj" />
     <ProjectReference Include="..\EventPlanning.Domain\EventPlanning.Domain.csproj" />
   </ItemGroup>
 
