"chore(db): initial migration and update"

--- a/src/EventPlanning.Api/appsettings.Development.json
+++ b/src/EventPlanning.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=localhost;Database=EventPlanning;Trusted_Connection=True;TrustServerCertificate=True"
+    "Default": "Server=(localdb)\\MSSQLLocalDB;Database=EventPlanningDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "Email": {
     "From": "no-reply@yourdomain.com",
