--- a/tests/EventPlanning.UnitTests/EventPlanning.UnitTests.csproj
+++ b/tests/EventPlanning.UnitTests/EventPlanning.UnitTests.csproj
@@ -10,12 +10,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="15.1.0" />
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
     <PackageReference Include="FluentAssertions" Version="8.8.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.21" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="xunit" Version="2.5.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Contracts\Contracts.csproj" />
+    <ProjectReference Include="..\..\src\EventPlanning.Application\EventPlanning.Application.csproj" />
+    <ProjectReference Include="..\..\src\EventPlanning.Domain\EventPlanning.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
